# slightly-better-cut

./: .gitignore  Cargo.toml  README.md  justfile  sample.csv  sample.tsv  sample_bigger.csv  sample_zero_terminated.txt
.github/workflows/: test.yml  tests.yml
src/: cli.rs  cut.rs  main.rs  range_parser.rs
tests/: coreutils_cut_compatibility.rs  new_functionality.rs
